--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ main {
   --tertiary: #9dd1f1;
   --light: #fafafa;
   --dark: #000000;
-  --darker: #111111;
+  --darker: #031927;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
@@ -91,16 +91,60 @@ a:hover {
   cursor: pointer;
 }
 
-header {
-  background: var(--primary);
+header{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 15px 25px;
+  background-color: var(--primary);
+}
+
+header h2 {
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+  margin: 0;
 }
 
 header a {
+  text-decoration: none;
+  color: var(--secondary-color);
+}
+
+.navbar{
+  margin: 7px 0;
+}
+
+.navbar ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.navbar li {
+  cursor: pointer;
+}
+
+.navbar ul li a {
+  padding: 10px 15px;
+  font-size: 1.2rem;
   color: var(--light);
+}
+
+header nav ul li a:hover {
+  background: var(--secondary-color);
+  color: var(--primary-colorcolor);
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 button {
   font-size: 1rem;
+  font-weight: 600;
+  color: #fff;
   text-decoration: none;
   padding: 0.25rem 1rem;
   border-radius: .5rem;
@@ -108,7 +152,7 @@ button {
   outline: none;
   cursor: pointer;
   margin: 0 1px;
-  background-color: var(--secondary);
+  background-color: var(--primary);
 }
 
 button:hover {
@@ -121,12 +165,25 @@ button[disabled] {
 }
 
 form {
-  width: 40%;
+  justify-content: center;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.text-center{
+  text-align: center;
+  color: var(--darker);
+}
+
+label{
+  color: var(--darker);
 }
 
 input {
   font-size: 1rem;
-  padding: 0.25rem;
+  padding: 0.4rem;
+  margin-bottom: 0.6rem;
+  width: 100%;
   border: 1px solid var(--dark);
   outline: none;
   border-radius: 3px;
@@ -138,22 +195,10 @@ input:focus {
   box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
 }
 
-li {
-  list-style: none;
-}
-
-nav a:hover {
-  text-decoration: none;
-}
-
-nav  li {
-  cursor: pointer;
-}
-
 textarea {
-	width: 600px;
-	height: 120px;
-	border: 3px solid #cccccc;
+	width: 100%;
+	height: auto;
+	border: 3px solid var(--primary);
 	padding: 5px;
 }
 
@@ -169,14 +214,6 @@ textarea {
   flex-wrap: wrap;
 }
 
-.space-between {
-  justify-content: space-between;
-}
-
-.flex-end {
-  justify-content: flex-end;
-}
-
 .mx-1 {
   margin-right: var(--spacing-one);
   margin-left: var(--spacing-one);
@@ -185,101 +222,6 @@ textarea {
 .mx-2 {
   margin-right: var(--spacing-two);
   margin-left: var(--spacing-two);
-}
-
-.my-1 {
-  margin-top: var(--spacing-one);
-  margin-bottom: var(--spacing-one);
-}
-
-.my-2 {
-  margin-top: var(--spacing-two);
-  margin-bottom: var(--spacing-two);
-}
-
-.my-5 {
-  margin-top: var(--spacing-five);
-  margin-bottom: var(--spacing-five);
-}
-
-.px-1 {
-  padding-right: var(--spacing-one);
-  padding-left: var(--spacing-one);
-}
-
-.px-2 {
-  padding-right: var(--spacing-two);
-  padding-left: var(--spacing-two);
-}
-
-.py-1 {
-  padding-top: var(--spacing-one);
-  padding-bottom: var(--spacing-one);
-}
-
-.py-2 {
-  padding-top: var(--spacing-two);
-  padding-bottom: var(--spacing-two);
-}
-
-.card {
-  width: 25%;
-  text-align: center;
-}
-
-.img-thumbnail {
-  width: auto;
-  height: 300px;
-  margin-bottom: 50px;
-  cursor: pointer;
-}
-
-.modalBackdrop {
-	background: rgba(0, 0, 0, .65);
-	bottom: 0;
-	left: 0;
-	overflow: auto;
-	position: fixed;
-	right: 0;
-	top: 0;
-	z-index: 1;
-}
-
-.modalContainer {
-	background: var(--darker);
-	border-radius: 5px;
-	max-width: 100%;
-	margin: 50px auto;
-	padding: 15px;
-	width: 960px;
-}
-
-.modalTitle {
-	font-size: 18px;
-	font-weight: 600;
-	margin-bottom: 25px;
-}
-
-button {
-	background: var(--primary);
-	border: 0;
-	border-radius: 5px;
-	color: #fff;
-	cursor: pointer;
-	font-size: 16px;
-	font-weight: 600;
-	margin-bottom: 30px;
-	padding: 10px 15px;	
-}
-
-a {
-	border-radius: 5px;
-	color: var(--primary);
-	font-weight: 600;
-	padding: 2px 4px;
-	margin-left: -2px;
-	margin-right: -2px;
-	
 }
 
 .navActive {
@@ -377,11 +319,6 @@ a {
   color: var(--accent2-color);   
 }
 
-.contact-bg{
-  background-color: var(--primary-color);
-  min-height: 100px;
-}
-
 .contact-container{
   display: flex;
   justify-content: center;
@@ -389,8 +326,94 @@ a {
 
 .footer-icons{
   margin: 1.5em;
+  color: var(--darker);
 }
 
-.contact-info img:hover{
-  transform: translateY(-7px);
+/* About Me Section */
+
+.profile-card{
+  width: 95%;
+  margin: 6vh auto;
+  padding-bottom: 8vh;
+}
+
+.profile-info{
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+  margin: 10px;
+  padding: 10px;
+  background: var(--darker);
+  color: var(--secondary);
+}
+
+.profile-info img{
+ border-radius: 50%;
+ border: 3px solid var(--accent2-color);
+ margin: 1rem;
+ width: 300px;
+ height: 300px;
+ object-fit: cover;
+}
+
+.bio{
+  padding: 25px;
+  line-height: 1.3;
+  text-align: center;
+}
+
+.bio h2{
+  font-size: 32px;
+  padding: 0 0 15px 0;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 980px){
+    .navbar ul li a{
+        font-size: 1rem;
+    }
+
+    .profile-card{
+        padding-bottom: 1.4rem;
+    }
+
+    .flex-row-short{
+        padding-bottom: 2vh;
+    }
+}
+
+@media screen and (max-width: 575px){
+    .profile-info{
+        flex-direction: column;
+    }
+
+    .navbar ul li a{
+        font-size: 1rem;
+    }
+
+    .navbar{
+        margin-top: 1.5rem;
+    }
+
+    header{
+        text-align: center;
+        margin: 0 auto;
+        justify-content: center;
+    }
+
+    .flex{
+        flex-direction: column;
+        justify-content: center;
+        max-width: 95%;
+    }
+
+    .live-link-rb{
+        max-width: 98%;
+    }
+
+    .contact-info img{
+        width: 30px;
+        height: 30px;
+    }
 }
