--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   letter-spacing: .1em;
   background: var(--secondary);
   color: var(--light);
-  font-family: 'Poiret One', sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
 
 }
 
@@ -102,8 +102,7 @@ header{
 
 header h2 {
   font-weight: bold;
-  font-size: 1.5rem;
-  color: var(--secondary-color);
+  font-size: 1.7rem;
   margin: 0;
 }
 
@@ -156,7 +155,7 @@ button {
 }
 
 button:hover {
-  opacity: .8;
+  opacity: .9;
 }
 
 button[disabled] {
@@ -168,11 +167,6 @@ form {
   justify-content: center;
   width: 50%;
   margin: 0 auto;
-}
-
-.text-center{
-  text-align: center;
-  color: var(--darker);
 }
 
 label{
@@ -202,6 +196,10 @@ textarea {
 	padding: 5px;
 }
 
+textarea:focus{
+  border: 1px solid var(--secondary);
+}
+
 .container {
   width: 85%;
   max-width: 1200px;
@@ -225,14 +223,18 @@ textarea {
 }
 
 .navActive {
-  color: var(--secondary);
+  color: var(--darker);
+}
+
+.noNavActive{
+  color: var(--primary);
 }
 
 .section-title{
   text-align: center;
-  font-size: 32px;
+  font-size: 2rem;
   padding: 5px;
-  color: var(--primary);   
+  color: var(--darker);   
 }
 
 .flex-long{
@@ -319,9 +321,14 @@ textarea {
   color: var(--accent2-color);   
 }
 
+footer{
+  flex-direction: column;
+}
+
 .contact-container{
   display: flex;
   justify-content: center;
+  align-items: flex-end;
 }
 
 .footer-icons{
@@ -365,6 +372,17 @@ textarea {
 .bio h2{
   font-size: 32px;
   padding: 0 0 15px 0;
+}
+
+/* Resume Section */
+
+.resume-section{
+  text-align: center;
+  color: var(--darker);
+}
+
+.resume-link{
+  color: var(--primary);
 }
 
 /* Media Queries */
