--- a/src/index.css
+++ b/src/index.css
@@ -37,43 +37,6 @@ body {
   background: var(--secondary);
   color: var(--light);
   font-family: 'Trebuchet MS', sans-serif;
-
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  margin: 5px 0;
-  line-height: 1.25;
-}
-
-h1 {
-  font-size: 2.25rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-h6 {
-  font-size: 1rem;
 }
 
 p {
@@ -139,13 +102,153 @@ header nav ul li a:hover {
   text-shadow: none;
 }
 
+/* === Card Styles === */
+
+.columns{
+  display: grid;
+  grid-auto-flow: column;
+  gap: 1em;
+  width: min(90%, 75rem);
+}
+
+.card {
+  border: 1px solid #f2f2f2;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.card-image-container {
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;
+  position: relative;
+}
+
+.card-image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 20px;
+}
+
+.card-title {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.card-info-container {
+  margin-top: 20px;
+}
+
+.card-info {
+  font-size: 16px;
+  margin: 0;
+}
+
+.card-links {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.card-links button {
+  background-color: #f2f2f2;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.card-links button a {
+  color: #333;
+  text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+/* .cards{
+  grid-column: 2 / span 12;
+  display: grid;
+  grid-template-columns: repeat(12, minmax(auto, 60px));
+  grid-gap: 40px;
+}
+
+.card{
+  grid-column-end: span 4;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  background-color: var(--darker);
+  border-radius: 7px 7px 5px 5px;
+}
+
+.card-image-container{
+  width: 100%;
+  padding-top: 60%;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.card-image-container img{
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.card-content{
+  padding: 1.1rem;
+}
+
+.card-title{
+  color: hsl(0, 46%, 39%);
+  margin: 0 0 0.5rem 0;
+  font-size: 1.5rem;
+}
+
+.card-info-container{
+  display: flex;
+  flex-direction: column;
+  align-self: end;
+  align-items: center;
+}
+.card-info{
+  font-family: 'Lexend Exa',sans-serif;
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
+}
+
+.card-links{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+} */
+
+
 button {
   font-size: 1rem;
   font-weight: 600;
   color: #fff;
   text-decoration: none;
   padding: 0.25rem 1rem;
-  border-radius: .5rem;
+  border-radius: 0.2rem;
   border: none;
   outline: none;
   cursor: pointer;
