--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-main {
-	margin: 0 auto;
-	max-width: 90%;
-  padding: 50px 30px;
-}
 
 :root {
   --primary: #508AA8;
@@ -11,41 +6,31 @@ main {
   --light: #fafafa;
   --dark: #000000;
   --darker: #031927;
-  --error: rgb(228, 46, 1);
-  --spacing-one: calc(1rem * 0.5);
-  --spacing-two: calc(1rem);
-  --spacing-five: calc(2.5rem);
-
 }
 
 * {
   box-sizing: border-box;
 }
 
-html,
-body {
+html{
   min-height: 100%;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-weight: 600;
-  line-height: 1.5;
-  font-size: 18px;
-  letter-spacing: .1em;
-  background: var(--secondary);
-  color: var(--light);
   font-family: 'Trebuchet MS', sans-serif;
+  color: var(--light);
 }
 
-p {
-  font-size: 1.1rem;
-  margin-top: 0;
+.app{
+  min-height: 100vh;
+  min-height: 100dvh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 a {
-  color: var(--tertiary);
   text-decoration: none;
   font-weight: bold;
 }
@@ -104,23 +89,58 @@ header nav ul li a:hover {
 
 /* === Card Styles === */
 
+.card {
+  background-color: #031927;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-template-columns: 100%;
+  height: 100%;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  flex: 2 1;
+
+
+
+  border: lime 2px solid;
+}
+
+.card-links {
+  /* display: grid;
+  gap: 0.5rem;
+  grid-template-columns: 1fr 1fr; */
+  justify-content: space-evenly;
+  display: flex;
+
+}
+
+
+
+.grid-container{
+  display: grid;
+  place-items: center;
+}
+
 .columns{
   display: grid;
   grid-auto-flow: column;
   gap: 1em;
-  width: min(90%, 75rem);
+  width: min(95%, 90rem);
 }
 
-.card {
+/* .card {
   border: 1px solid #f2f2f2;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-}
+} */
 
 .card-image-container {
   width: 100%;
   height: 0;
   padding-bottom: 75%;
   position: relative;
+  background-color: #508AA8;
 }
 
 .card-image-container img {
@@ -132,18 +152,20 @@ header nav ul li a:hover {
   object-fit: cover;
 }
 
-.card-content {
-  padding: 20px;
-}
+/* .card-content {
+  padding: 1.2rem;
+  display: grid;
+  grid-auto-flow: row;
+} */
 
 .card-title {
   margin: 0;
-  font-size: 20px;
+  font-size: 1.3rem;
   font-weight: bold;
 }
 
 .card-info-container {
-  margin-top: 20px;
+  margin-top: 1.2rem;
 }
 
 .card-info {
@@ -151,20 +173,19 @@ header nav ul li a:hover {
   margin: 0;
 }
 
-.card-links {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-}
+/* .card-links {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 1.3rem;
+} */
 
 .card-links button {
   background-color: #f2f2f2;
-  border: none;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .card-links button a {
@@ -484,61 +505,10 @@ footer{
 /* Resume Section */
 
 .resume-section{
-  text-align: center;
+  max-width: 60%;
+  margin: 0 auto;
   color: var(--darker);
-}
-
-.resume-link{
-  color: var(--primary);
 }
 
 /* Media Queries */
 
-@media screen and (max-width: 980px){
-    .navbar ul li a{
-        font-size: 1rem;
-    }
-
-    .profile-card{
-        padding-bottom: 1.4rem;
-    }
-
-    .flex-row-short{
-        padding-bottom: 2vh;
-    }
-}
-
-@media screen and (max-width: 575px){
-    .profile-info{
-        flex-direction: column;
-    }
-
-    .navbar ul li a{
-        font-size: 1rem;
-    }
-
-    .navbar{
-        margin-top: 1.5rem;
-    }
-
-    header{
-        text-align: center;
-        margin: 0 auto;
-        justify-content: center;
-    }
-
-    .flex{
-        flex-direction: column;
-        justify-content: center;
-        max-width: 95%;
-    }
-
-    .live-link-rb{
-        max-width: 98%;
-    }
-
-    .contact-info img{
-        width: 30px;
-        height: 30px;
-    }
-}
