--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,13 @@
   box-sizing: border-box;
 }
 
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
 html{
   min-height: 100%;
 }
@@ -89,103 +96,61 @@ header nav ul li a:hover {
 
 /* === Card Styles === */
 
-.card {
-  background-color: #031927;
-  display: grid;
-  grid-template-rows: 1fr auto;
-  grid-template-columns: 100%;
-  height: 100%;
-}
-
-.card-content {
-  display: flex;
-  flex-direction: column;
-  flex: 2 1;
-
-
-
-  border: lime 2px solid;
-}
-
-.card-links {
-  /* display: grid;
-  gap: 0.5rem;
-  grid-template-columns: 1fr 1fr; */
-  justify-content: space-evenly;
-  display: flex;
-
-}
-
-
-
 .grid-container{
   display: grid;
   place-items: center;
+  max-width: 200rem;
+}
+
+.card {
+  background-color: #031927;
+  border-radius: 0.2rem;
+}
+
+.card-links {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .columns{
   display: grid;
-  grid-auto-flow: column;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 1em;
-  width: min(95%, 90rem);
 }
 
-/* .card {
-  border: 1px solid #f2f2f2;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-} */
-
-.card-image-container {
+.card__img {
+  border-radius: 0.2rem 0.2rem 0 0 ;
   width: 100%;
-  height: 0;
-  padding-bottom: 75%;
-  position: relative;
-  background-color: #508AA8;
-}
-
-.card-image-container img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  aspect-ratio: 2 / 1;
   object-fit: cover;
+  object-position: left;
 }
 
-/* .card-content {
-  padding: 1.2rem;
+.card-content{
   display: grid;
-  grid-auto-flow: row;
-} */
+  grid-template-rows: auto 1fr auto;
+}
 
 .card-title {
-  margin: 0;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-weight: bold;
 }
 
 .card-info-container {
-  margin-top: 1.2rem;
+  margin: 0 1rem;
 }
 
-.card-info {
-  font-size: 16px;
-  margin: 0;
-}
-
-/* .card-links {
-  display: grid;
-  gap: 1.5rem;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 1.3rem;
+/* .card-info{
+  
 } */
 
 .card-links button {
   background-color: #f2f2f2;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
+  padding: 10px 25px;
   font-size: 1rem;
+  border-radius: 0.3rem;
+  border: none;
+  margin: 1.5rem 0 0.5rem 0;
 }
 
 .card-links button a {
@@ -193,98 +158,13 @@ header nav ul li a:hover {
   text-decoration: none;
 }
 
-
-
-
-
-
-
-
-
-/* .cards{
-  grid-column: 2 / span 12;
-  display: grid;
-  grid-template-columns: repeat(12, minmax(auto, 60px));
-  grid-gap: 40px;
-}
-
-.card{
-  grid-column-end: span 4;
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-  background-color: var(--darker);
-  border-radius: 7px 7px 5px 5px;
-}
-
-.card-image-container{
-  width: 100%;
-  padding-top: 60%;
-  border-radius: 5px 5px 0 0;
-  overflow: hidden;
-  position: relative;
-}
-
-.card-image-container img{
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
-
-.card-content{
-  padding: 1.1rem;
-}
-
-.card-title{
-  color: hsl(0, 46%, 39%);
-  margin: 0 0 0.5rem 0;
-  font-size: 1.5rem;
-}
-
-.card-info-container{
-  display: flex;
-  flex-direction: column;
-  align-self: end;
-  align-items: center;
-}
-.card-info{
-  font-family: 'Lexend Exa',sans-serif;
-  font-size: 0.9rem;
-  margin-bottom: 1rem;
-}
-
-.card-links{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
-} */
-
-
-button {
-  font-size: 1rem;
-  font-weight: 600;
-  color: #fff;
-  text-decoration: none;
-  padding: 0.25rem 1rem;
-  border-radius: 0.2rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  margin: 0 1px;
-  background-color: var(--primary);
-}
-
-button:hover {
+.card-links button:hover {
   opacity: .9;
 }
 
-button[disabled] {
-  cursor: default;
-  opacity: .8;
-}
+
+
+
 
 form {
   justify-content: center;
