--- a/src/index.css
+++ b/src/index.css
@@ -137,20 +137,20 @@ header nav ul li a:hover {
 }
 
 .card-info-container {
-  margin: 0 1rem;
+  margin: 0 3rem;
 }
 
-/* .card-info{
-  
-} */
+.card-info{
+  margin-bottom: 2rem;
+}
 
 .card-links button {
-  background-color: #f2f2f2;
+  background-color: #9DC7C8;
   padding: 10px 25px;
   font-size: 1rem;
   border-radius: 0.3rem;
   border: none;
-  margin: 1.5rem 0 0.5rem 0;
+  margin-bottom: 0.5rem;
 }
 
 .card-links button a {
