--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 :root {
   --primary: #508AA8;
   --secondary: #C8E0F4;
@@ -12,6 +11,10 @@
   box-sizing: border-box;
 }
 
+html{
+  min-height: 100%;
+}
+
 /* Make images easier to work with */
 img,
 picture {
@@ -19,15 +22,11 @@ picture {
   display: block;
 }
 
-html{
-  min-height: 100%;
-}
-
 body {
   margin: 0;
   padding: 0;
   font-family: 'Trebuchet MS', sans-serif;
-  color: var(--light);
+  color: var(--dark);
 }
 
 .app{
@@ -45,6 +44,7 @@ a {
 a:hover {
   cursor: pointer;
 }
+
 
 header{
   display: flex;
@@ -163,58 +163,6 @@ header nav ul li a:hover {
 }
 
 
-
-
-
-form {
-  justify-content: center;
-  width: 50%;
-  margin: 0 auto;
-}
-
-label{
-  color: var(--darker);
-}
-
-input {
-  font-size: 1rem;
-  padding: 0.4rem;
-  margin-bottom: 0.6rem;
-  width: 100%;
-  border: 1px solid var(--dark);
-  outline: none;
-  border-radius: 3px;
-  transition: box-shadow 0.2s;
-}
-
-input:focus {
-  border: 1px solid var(--secondary);
-  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
-}
-
-textarea {
-	width: 100%;
-	height: auto;
-	border: 3px solid var(--primary);
-	padding: 5px;
-}
-
-textarea:focus{
-  border: 1px solid var(--secondary);
-}
-
-.container {
-  width: 85%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.flex-row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .mx-1 {
   margin-right: var(--spacing-one);
   margin-left: var(--spacing-one);
@@ -240,86 +188,6 @@ textarea:focus{
   color: var(--darker);   
 }
 
-.flex-long{
-  max-width: 98%;
-  margin: 0 auto;
-  min-height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.live-link-rb{
-  background: url(./assets/images/hero-bg.jpg);
-  flex-basis: 98%;
-}
-
-.live-link-hori{
-  background: url(./assets/images/digital-marketing-meeting.jpg);
-  flex-basis: 100%;
-}
-
-.live-link-HH{
-  background: url(./assets/images/Burger-Assistant.png);
-  flex-basis: 100%;
-}
-
-.live-link-jw{
-  background: url(./assets/images/Jake-Wilson-Art.png);
-  flex-basis: 100%;
-}
-
-.live-link-S2R{
-  background: url(./assets/images/Step2Rythym.png);
-  flex-basis: 100%;
-}
-
-.live-link-lw{
-  background: url(./assets/images/live-wire.png);
-  flex-basis: 100%;
-}
-
-.live-links-box{
-  display: flex;
-  justify-content: center;
-  background-size: cover;
-  background-position: center;
-  min-height: 400px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-  border-radius: 15px;
-  margin: 1rem;
-}
-
-.flex-row-short{
-  margin: 0 auto;
-  min-height: 100%;
-  display: flex;
-  justify-content: center;
-  padding-bottom: 8vh;
-}
-
-.live-links-text{
-  margin: auto;
-  width: 40%;
-  text-align: center;
-  align-items: center;
-}
-
-.portfolio-buttons{
-  padding: 10px 10px;
-  line-height: 1.3;
-  background-color: var(--primary);
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: all 0.3s ease 0s;
-}
-
-.portfolio-buttons:hover{
-  color: var(--dark);
-  transform: translateY(-7px);
-}
-
 /* Contact Section Styles */
 
 .section-title-secondary{
@@ -329,57 +197,63 @@ textarea:focus{
   color: var(--accent2-color);   
 }
 
-footer{
+.contact-container{
+  display: flex;
+  justify-content: space-evenly;
   flex-direction: column;
 }
 
-.contact-container{
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+.footer-icons{
+  color: var(--darker);
 }
 
-.footer-icons{
-  margin: 1.5em;
-  color: var(--darker);
+.footer-icons-row{
+  display: flex;
+}
+
+.footer-icons-row p {
+  margin-left: 1rem;
 }
 
 /* About Me Section */
 
 .profile-card{
-  width: 95%;
-  margin: 6vh auto;
-  padding-bottom: 8vh;
+  max-width: 90%;
+  margin: 1rem auto;
 }
 
 .profile-info{
   display: flex;
-  align-items: center;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-  margin: 10px;
-  padding: 10px;
-  background: var(--darker);
+  background: var(--tertiary);
   color: var(--secondary);
 }
 
-.profile-info img{
- border-radius: 50%;
- border: 3px solid var(--accent2-color);
- margin: 1rem;
- width: 300px;
- height: 300px;
+.img-container{
+  width: 50%;
+  margin: 1rem;
+}
+
+.img-container img{
+ max-width: 100%;
  object-fit: cover;
 }
 
 .bio{
-  padding: 25px;
-  line-height: 1.3;
-  text-align: center;
+  line-height: 1.4;
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0.4rem 1.5rem;
+
 }
 
 .bio h2{
-  font-size: 32px;
-  padding: 0 0 15px 0;
+  font-size: 2rem;
+}
+
+.bio p{
+  max-width: 80%;
+  flex: 1;
 }
 
 /* Resume Section */
