--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
 
 /* === SET UP & UTILITY === */
 
 :root {
   --primary: #F7F6F2;
-  --secondary: #F0E5CF;
+  --secondary: #E1D7C6;
   --background: #C8C6C6;
-  --accent: #4B6587;
-  --accent2: #D2CCA1;
+  --accent: #C66771;
+  --accent2: #4E6C50;
+  --black: #000;
+  --title: 'Questrial', sans-serif;
+  --text-font: 'Montserrat',sans-serif;
 }
 
 * {
@@ -27,7 +32,7 @@ picture {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Trebuchet MS', sans-serif;
+  font-family: var(--text-font);
   background-color: var(--background);
 }
 
@@ -41,6 +46,7 @@ body {
 a {
   text-decoration: none;
   font-weight: bold;
+  color: var(--primary);
 }
 
 a:hover {
@@ -49,6 +55,11 @@ a:hover {
 
 section{
   margin-top: 3rem;
+}
+
+.section-title{
+  color: var(--black);
+  font-size: 1.7rem;
 }
 
 .mx-1 {
@@ -61,17 +72,20 @@ section{
   margin-left: var(--spacing-two);
 }
 
+h1, h2, h3, h4, h5, h6{
+  font-family: var(--title);
+}
+
 
 /* === HEADER === */
 
 header{
+  width: 100%;
+  background-color: var(--accent2);
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 1rem 1.5rem;
-  margin-bottom: 3rem;
-  background-color: var(--primary);
+  justify-content: center;
+  padding: 1.5rem 0;
+  color: var(--secondary);
 }
 
 header h2 {
@@ -80,19 +94,18 @@ header h2 {
   margin: 0;
 }
 
-header a {
-  color: var(--secondary);
+.navbar-container{
+  width: 70%;
 }
 
 .navbar{
-  margin: 7px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .navbar ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   list-style: none;
 }
 
@@ -101,66 +114,68 @@ header a {
 }
 
 .navbar ul li a {
-  padding: 10px 15px;
   font-size: 1.2rem;
+  color: var(--secondary);
 }
 
 header nav ul li a:hover {
-  background: var(--secondary-color);
-  color: var(--primary-colorcolor);
-  border-radius: 15px;
-  text-shadow: none;
+  color: var(--primary);
 }
 
-/* === Card Styles === */
+/* === Project Card Styles === */
 
 .grid-container{
   display: grid;
-  place-items: center;
-  max-width: 200rem;
+  margin: 3rem auto;
+  max-width: 70%;
 }
 
 .card {
-  background-color: var(--accent);
+  background-color: var(--accent2);
+  color: var(--secondary);
   border-radius: 0.2rem;
-}
-
-.card-links {
+  flex: 1 1 21rem;
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-self: normal;
 }
 
 .columns{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  gap: 2rem;
-  margin: 0 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  gap: 1rem;
 }
 
 .card__img {
   border-radius: 0.2rem 0.2rem 0 0 ;
   width: 100%;
-  aspect-ratio: 2 / 1;
+  aspect-ratio: 16 / 9;
   object-fit: cover;
   object-position: left;
 }
 
 .card-content{
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  margin: 0 1rem;
 }
 
 .card-title {
   font-size: 1.4rem;
   font-weight: bold;
-}
-
-.card-info-container {
-  margin: 0 3rem;
+  margin: 1rem 1rem 0;
 }
 
 .card-info{
-  margin-bottom: 2rem;
+  font-size: 1rem;
+  margin: 1rem 1rem 1.5rem;
+}
+
+.card-links {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: auto;
 }
 
 .card-links button {
@@ -169,7 +184,7 @@ header nav ul li a:hover {
   font-size: 1rem;
   border-radius: 0.3rem;
   border: none;
-  margin-bottom: 0.5rem;
+  margin: auto 0 0.5rem;
 }
 
 .card-links button a {
@@ -184,7 +199,7 @@ header nav ul li a:hover {
 /* ABOUT SECTION */
 
 .profile-card{
-  max-width: 80%;
+  max-width: 70%;
   margin: 0 auto;
   background-color: var(--accent2);
 }
@@ -192,7 +207,7 @@ header nav ul li a:hover {
 .profile-info{
   display: flex;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-  color: var(--accent);
+  color: var(--primary);
 }
 
 .img-container{
@@ -207,20 +222,23 @@ header nav ul li a:hover {
 }
 
 .bio{
-  line-height: 1.4;
+  line-height: 1.25;
+  font-family: var(--text-font);
   display: flex;
   flex-direction: column;
-  margin: 0 0 0.4rem 1.5rem;
+  margin: 0 0 0 1.5rem;
 }
 
 .bio h2{
-  font-size: 2rem;
+  margin: 1rem 0 0 0;
+  color: var(--primary)
 }
 
 .bio p{
-  max-width: 80%;
+  max-width: 90%;
   flex: 1;
-  font-size: 1em;
+  font-size: 1.1rem;
+  text-align: justify;
 }
 
 .social-icons-col{
@@ -232,13 +250,18 @@ header nav ul li a:hover {
 }
 
 .bio-social-icons {
-  color: var(--light);
+  color: var(--accent);
+}
+
+.bio-social-icons:hover{
+  color: var(--background);
 }
 
 /* === FOOTER === */
 
 footer{
-  background-color: var(--primary);
+  background-color: var(--accent2);
+  color: var(--primary);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -251,7 +274,7 @@ footer{
 }
 
 .footer-icons{
-  color: var(--darker);
+  color: var(--primary);
   margin: 0.3rem;
 }
 
