--- a/src/index.css
+++ b/src/index.css
@@ -253,30 +253,33 @@ header nav ul li a:hover {
 /* Modal Styles */
 
 .modal-overlay {
+  display: none;
   position: fixed;
+  z-index: 900;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .modal {
-  background: #fff;
+  background: #fefefe;
+  margin: 15% auto;
   padding: 20px;
   max-width: 80%;
   max-height: 80%;
-  overflow: auto;
-  position: relative;
 }
 
 .close-button {
-  position: absolute;
+  float: right;
   top: 10px;
   right: 10px;
+  color: #aaa;
 }
 
 
