--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --primary: #F7F6F2;
   --secondary: #E1D7C6;
   --background: #C8C6C6;
-  --accent: #C66771;
+  --accent: #c56771;
   --accent2: #4E6C50;
   --black: #000;
   --title: 'Questrial', sans-serif;
@@ -176,11 +176,11 @@ header nav ul li a:hover {
 
 .card-links button {
   background-color: var(--background);
-  padding: 8px 25px;
+  padding: 12px 16px;
   font-size: 1rem;
   border-radius: 0.3rem;
   border: none;
-  margin: auto 0 0.5rem;
+  margin: 1rem 0 1.5rem;
 }
 
 .card-links button a {
@@ -252,35 +252,47 @@ header nav ul li a:hover {
 
 /* Modal Styles */
 
-.modal-overlay {
-  display: none;
+
+.open-modal{
+  padding: 12px 16px;
+  background-color: var(--accent);
+  border: none;
+  font-family: var(--title);
+  font-size: 1.2rem;
+  color: var(--primary);
+  transition-duration: 0.4s;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.open-modal:hover{
+  background-color: hsla(354, 45%, 57%, 0.8);
+}
+
+.modal-overlay{
   position: fixed;
-  z-index: 900;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.modal {
-  background: #fefefe;
-  margin: 15% auto;
+.modal-container{
+  background-color: var(--primary);
   padding: 20px;
-  max-width: 80%;
-  max-height: 80%;
+  border-radius: 8px;
+  max-width: 90%;
+  max-height: 90%;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.close-button {
-  float: right;
-  top: 10px;
-  right: 10px;
-  color: #aaa;
-}
 
 
 /* Media Queries */
